- make tokens accuratly represent whitespace - add small bit of padding to input bar - add todo note in JS file (should really make issues for these things 🙄)

--- a/querybar.css
+++ b/querybar.css
@@ -30,7 +30,7 @@
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
-    white-space: nowrap;
+    white-space: pre;
 }
 
 ._qb-container {
@@ -69,4 +69,6 @@
     float: right;
     margin-top: .25em;
     margin-bottom: .25em;
+    /* Add some slight padding so the cursor doesn't flow into left border */
+    padding-left: 2px;
 }
